2010-01-28  Andreia Gaita  <avidigal@novell.com>

	* mozilla.m4: Add Firefox 3.6 support

2010-01-27  Chris Toshok  <toshok@ximian.com>

	* pal.m4: for now we hardcode glib+unix domain sockets for the
	messaging layer.

2010-01-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ffmpeg.m4: We need libavformat too now.

2009-12-12  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mono.m4: Remove PLUGIN_SL_2_0 definition, it's always true.

2009-12-08  Chris Toshok  <toshok@ximian.com>

	* build-configuration.m4: add --enable-sdk (defaults to yes) so
	people can disable the monodevelop sdk installation.

2009-10-07  Rusty Howell  <rhowell@novell.com>

	 * mozilla.m4: Reverting MAX_FIREFOX_VERSION back to 3.5.* due to FF 3.6
	deprecating XPCOM and migrating to npruntime
	See: http://lists.ximian.com/pipermail/moonlight-list/2009-October/000627.html

2009-07-30  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* mozilla.m4: Bump MAX_FIREFOX_VERSION to make it work with
	Firefox trunk. See 
	http://lists.ximian.com/pipermail/moonlight-list/2009-June/000504.html

2009-06-02  Rusty Howell  <rhowell@novell.com>

	 * examples.m4: Added to be able to disable building the examples

2009-05-06  Raja R Harinath  <harinath@hurrynot.org>

	* mono.m4 (mcspath): Use $(srcdir) to refer to mcs/.
	(mono_basic_path): Likewise for mono-basic/.
	Use AC_MSG_WARN instead of AC_WARNING.

2009-05-02  Andreia Gaita  <avidigal@novell.com>

	* unwind.m4: Only add unwind libs if building in debug mode

2009-04-29  Andreia Gaita  <avidigal@novell.com>

	* unwind.m4: Add libunwind checks

2009-04-23  Aaron Bockover  <abock@gnome.org>

	* firefox-xpi.m4:

2009-04-23  Aaron Bockover  <abockover@novell.com>

	* firefox-xpi.m4: Fix regression that allows building without
	any browser support

2009-04-22  Rusty Howell   <rhowell@novell.com>

	* Removed --enable-user-plugin from firefox-xpi.m4

2009-04-22  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* testing.m4: Sles 10 has ImageMagick 6.2.5. Let's see if that